# node-clipboard-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs  wayland.rs
tests/: test_clipboard_listener.js  test_set_clipboard.js  test_watch.js  test_watch_roundtrip_once.js
