
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "clipboard"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64       = "0.22.1"
clipboard-rs = "0.3.0"
napi         = { version = "3.0.0", features = ["async"] }
napi-derive  = "3.0.0"
tokio        = { version = "1.0", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
